// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Active Doken > when activating 1`] = `
{
  "_tag": "Doken",
  "ephemeral": 0,
  "id": "testid",
  "status": "Active",
  "token": "<redacted>",
  "ttl": "1970-01-01T00:14:00.000Z",
  "type": 0,
}
`;

exports[`Fresh Doken > given DateTime, when making 1`] = `
{
  "_tag": "Doken",
  "ephemeral": 0,
  "id": "testid",
  "status": "Fresh",
  "token": "<redacted>",
  "ttl": "2025-02-21T03:51:50.693Z",
  "type": 0,
}
`;

exports[`Fresh Doken > when making 1`] = `
{
  "_tag": "Doken",
  "ephemeral": 0,
  "id": "testid",
  "status": "Fresh",
  "token": "<redacted>",
  "ttl": "1970-01-01T00:00:02.000Z",
  "type": 0,
}
`;

exports[`Params Doken > given future TTL, when making params doken 1`] = `
{
  "_tag": "Doken",
  "ephemeral": 0,
  "id": "testid",
  "status": "Active",
  "token": "<redacted>",
  "ttl": "1970-01-02T03:46:40.000Z",
  "type": 0,
}
`;

exports[`Params Doken > given past TTL, when making params doken 1`] = `
{
  "_tag": "Doken",
  "ephemeral": 0,
  "id": "testid",
  "status": "Expired",
  "token": "<redacted>",
  "ttl": "1970-01-01T00:00:00.000Z",
  "type": 0,
}
`;

exports[`Spent Doken > when spending 1`] = `
{
  "_tag": "Doken",
  "ephemeral": 0,
  "id": "testid",
  "status": "Spent",
  "token": "<redacted>",
  "ttl": "1970-01-01T00:00:00.000Z",
  "type": 0,
}
`;
